fixed footer to not overlap with content

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ main {
   grid-gap: 20px;
   width: 80%;
   margin: auto;
+  margin-bottom: 134px;
 }
 
 section {
